syntax = "proto3";

import "google/protobuf/wrappers.proto";

option csharp_namespace = "GrpcServices.Yapi";

package Yapi;

service InterfaceService {
	rpc Add (InterfaceParameter) returns (YapiBaseModel);
	rpc Update (InterfaceParameter) returns (YapiBaseModel);
	rpc Delete (DeleteInterfaceParameter) returns (YapiBaseModel);
	rpc Export (ExportParameter) returns (FileBytes);
}

message YapiBaseModel {
    sint32 errcode = 1;
    string data = 2;
    string errmsg = 3;
}

message ExportParameter{
	string projectId = 1;
	string apiId = 2;
}

message FileBytes{
	repeated bytes bytes = 1;
	string fileName = 2;
}

message InterfaceParameter{
	google.protobuf.StringValue token = 1;
	repeated YapiParameterContract req_query = 2;
	repeated YapiParameterContract req_headers = 3;
	repeated YapiParameterContract req_body_form = 4;
	google.protobuf.StringValue title = 5;
	google.protobuf.StringValue catid = 6;
	google.protobuf.StringValue path = 7;
	google.protobuf.StringValue status = 8;
	google.protobuf.StringValue res_body_type = 9;
	google.protobuf.StringValue res_body = 10;
	bool switch_notice = 11;
	google.protobuf.StringValue message = 12;
	google.protobuf.StringValue desc = 13;
	google.protobuf.StringValue method = 14;
	repeated YapiParameterContract req_params = 15;
	google.protobuf.StringValue id = 16;
	google.protobuf.StringValue req_body_other = 17;
	google.protobuf.StringValue req_body_type = 18;
}

message YapiParameterContract{
	google.protobuf.StringValue name = 1;
	google.protobuf.StringValue value = 2;
	google.protobuf.StringValue example = 3;
	google.protobuf.StringValue desc = 4;
	google.protobuf.StringValue required = 5;
	google.protobuf.StringValue type = 6;
}

message DeleteInterfaceParameter{
	int32 id = 1;
}